--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
     "csurf": "^1.11.0",
     "dotenv": "^16.3.1",
@@ -10,6 +11,7 @@
     "express-session": "^1.17.3",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1"
   },
   "scripts": {
