--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1"
   },
   "scripts": {
-    "start": "node --watch app"
+    "start": "nodemon app"
   }
 }
