--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-validator": "^7.0.1",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1"
   },
