--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
-    "pdf-creator-node": "^2.3.5"
+    "pdf-creator-node": "^2.3.5",
+    "stripe": "^14.7.0"
   },
   "scripts": {
     "start": "nodemon app"
